opam-version: "2.0"
name: "satysfi-matrixcd-doc"
version: "0.1.0"
synopsis: "Document of MatrixCD"
description: """Document of MatrixCD package"""
authors: "Noriyuki Abe"
maintainer: "Noriyuki Abe"
homepage: "https://github.com/abenori/satysfi-matrixcd/"
bug-reports: "https://github.com/abenori/satysfi-matrixcd/issues"
dev-repo: "git+https://github.com/abenori/satysfi-matrixcd.git"
license: "MIT"
depends: [
  "satysfi" {>= "0.0.6" & < "0.0.8"}
  "satysfi-base" {>= "1.3.0" & < "1.5.0"}
  "satyrographos" {>= "0.0.2.0" & < "0.0.3.0"}
  "satysfi-dist"
  "satysfi-matrixcd" {= "%{version}%"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "matrixcd-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]

install: [
  ["satyrographos" "opam" "install"
   "--name" "matrixcd-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
